# kwin-mouse-smear-effect

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  metadata.json  uninstall.sh
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: config.ui  main.qml
src/: main.cpp  smear.cpp  smear.h  smear.kcfg  smear_config.cpp  smear_config.h  smear_config.ui  smearconfig.kcfgc  trail.cpp  trail.h  trail.kcfg  trail_config.cpp  trail_config.h  trail_config.ui  trailconfig.kcfgc
